First try with publications

--- a/publications.bib
+++ b/publications.bib
@@ -14,7 +14,7 @@
 	year = {2022},
 	keywords = {Information security, NIDS, Cybersecurity, Machine learning, Feature engineering},
 	pages = {116--125},
-	file = {Springer Full Text PDF:files/3600/Magán-Carrión et al. - 2022 - Assessing the Impact of Batch-Based Data Aggregati.pdf:application/pdf},
+	file = {pringer Full Text PDF:files/3600/Magán-Carrión et al. - 2022 - Assessing the Impact of Batch-Based Data Aggregati.pdf:application/pdf},
 }
 
 @inproceedings{theron_network-wide_2017,
